kubernetes-manifests/postgres.yml
apiVersion: v1
kind: Service
metadata:
  name: postgres-service
spec:
  type: ClusterIP
  selector:
    app: postgres
  ports:
    - port: 5432
      targetPort: 5432
      protocol: TCP

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
        - name: postgres
          image: postgres:12.10
          livenessProbe:
            tcpSocket:
              port: 5432
          ports:
            - containerPort: 5432
              name: postgres
          volumeMounts:
            - name: postgres-database-storage
              mountPath: /var/lib/pgsql/data
      volumes:
        - name: postgres-database-storage
          persistentVolumeClaim:
            claimName: postgres-pv-claim
